--- a/templates/index.html
+++ b/templates/index.html
@@ -8,23 +8,27 @@
 <body>
     <h1>거스름돈 계산기</h1>
     <form action="/" method="post">
-        <div>
-            <label for="price">상품 가격:</label>
-            <input type="number" id="price" name="price" required>
-        </div>
-        <br>
+        
         <div>
             <label for="paid">지불 금액:</label>
             <input type="number" id="paid" name="paid" required>
+        </div>
+        <br>
+        <div>
+            <label for="price">상품 가격:</label>
+            <input type="number" id="price" name="price" required>
         </div>
         <br>
         <button type="submit">계산하기</button>
     </form>
 
     {% if price %}
-    <h3>{{price}}원 - {{paid}}원 = {{change}}원</h3>
+    <h3>{{paid}}원 - {{price}}원 = {{change}}원</h3>
     <h3> 500원: {{coin500}}, 100원:{{coin100}}, 
         50원: {{coin50}} 10원: {{coin10}}</h3>
     {% endif %}
+    
+    
+
 </body>
 </html>
