--- a/templates/exchange/exchange_doller.html
+++ b/templates/exchange/exchange_doller.html
@@ -6,16 +6,22 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>거스름돈</h1>
-    <form action="/won" method="post">
+    <h1>달러 환전</h1>
+    <form action="/exchange" method="post">
         
         <div>
-            <label for="paid">지불금액:</label>
+            <label for="currency">환율:</label>
+            <input type="text" id="currency" name="currency"  value="USD" required>
+        </div>
+        <br>
+
+        <div>
+            <label for="paid">환율:</label>
             <input type="number" id="paid" name="paid" required>
         </div>
         <br>
         <div>
-            <label for="price">가격:</label>
+            <label for="price">환전을 원하는 금액:</label>
             <input type="number" id="price" name="price" required>
         </div>
         <br>
