--- a/templates/index.html
+++ b/templates/index.html
@@ -10,6 +10,7 @@
 
     <a href="/won"><h3>원화</h3></a>
     <a href="/doller"><h3>달러화</h3></a>
+    <a href="/yen"><h3>엔화</h3></a>
 
 </body>
 </html>
