--- a/templates/index.html
+++ b/templates/index.html
@@ -12,5 +12,9 @@
     <a href="/doller"><h3>달러화</h3></a>
     <a href="/yen"><h3>엔화</h3></a>
 
+
+
+    <a href="/bag"><h3>가방문제제</h3></a>
+
 </body>
 </html>
